# ai-canvas-planner

./: .env.example  .gitignore  Canvas Sweeper.dc.html  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260721_0001_phase_1.py  20260721_0002_phase_2_accounts_calendar.py  20260721_0003_one_time_oauth_state.py  20260721_0004_oauth_request_rate_limit.py  20260722_0005_phase_3_canvas.py
backend/app/: __init__.py  main.py
backend/app/api/: auth_routes.py  calendar_routes.py  canvas_routes.py  routes.py  user_routes.py
backend/app/core/: config.py  datetime_utils.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: canvas.py  domain.py  phase2.py
backend/app/services/: assignments.py  auth.py  calendar.py  canvai.py  canvas_client.py  canvas_content.py  canvas_sync.py  defaults.py  demo_data.py  google.py  workspace.py
backend/tests/: conftest.py  test_api.py  test_canvas_api.py  test_canvas_client.py  test_canvas_config_content.py  test_canvas_migration.py  test_canvas_sync.py  test_datetime_utils.py  test_phase2_auth.py  test_phase2_calendar.py  test_release_configuration.py  test_release_hardening.py  test_workspace.py
backend/tests/fixtures/: database_seed.py
design-reference/: README.md
docs/: architecture.md  authentication-flow.md  canvas-integration.md  database-schema.md  design-system.md  developer-setup.md  environment-variables.md  google-calendar-integration.md  phase-1-completion.md  phase-2-completion.md  phase-3-completion.md  phase-3-implementation-plan.md  phase-4-sprint-plan.md  roadmap.md
frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: layout.tsx  not-found.tsx
frontend/lib/: auth-service.ts  course-style.ts  date.ts  default-settings.ts  (+3 more)
(+80 files in other folders)
