[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canvas-sweeper-backend"
version = "0.1.0"
description = "Authenticated Canvas and calendar integration API for Canvas Sweeper"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2",
  "cryptography>=48.0.1,<49",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pip-audit>=2.10,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic"]
